{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 2,
  "lineage": "a7b53df5-25d7-9dea-a33f-792d6af11288",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "access_for_kiran_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:security-group/sg-083833b5f6738ff64",
            "description": "Security Group for all access from current IP for Dev / Test / Debugging",
            "filter": null,
            "id": "sg-083833b5f6738ff64",
            "name": "access_for_kiran_sg",
            "tags": {
              "Name": "ssh_for_kiran_sg"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "ctb_web_server_identifier_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:security-group/sg-0285b346da9d5571c",
            "description": "Security Group with no inbound rules",
            "filter": null,
            "id": "sg-0285b346da9d5571c",
            "name": "ctb_web_server_identifier_sg",
            "tags": {
              "Name": "ctb_web_server_identifier_sg"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ctb_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-0b4a77fa3dc552e4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/23",
            "default_for_az": false,
            "id": "subnet-0b4a77fa3dc552e4f",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "ctb_subnet_1"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ctb_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-041c1d6772f778695",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/23",
            "default_for_az": false,
            "id": "subnet-041c1d6772f778695",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "ctb_subnet_2"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ctb_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-0c0aa8ba7fcb50753",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/23",
            "default_for_az": false,
            "id": "subnet-0c0aa8ba7fcb50753",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "ctb_subnet_3"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ctb_subnet_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-0dfa1fbccb14885b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/23",
            "default_for_az": false,
            "id": "subnet-0dfa1fbccb14885b8",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "ctb_subnet_4"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ctb_subnet_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-08ba07b4512cac078",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.8.0/23",
            "default_for_az": false,
            "id": "subnet-08ba07b4512cac078",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "ctb_subnet_5"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ctb_subnet_6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-0a5d03e37645eb8ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.10.0/23",
            "default_for_az": false,
            "id": "subnet-0a5d03e37645eb8ee",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "ctb_subnet_6"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "cloudtechbitsvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:vpc/vpc-09464e2788a470e04",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-037d0efe360dfb40a",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-c60b46be",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09464e2788a470e04",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0805b5e91da6bb5b1",
            "ipv6_cidr_block": "2600:1f18:1d9b:2b00::/56",
            "main_route_table_id": "rtb-0ad84709d37488236",
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "Cloud Tech Bits"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "configserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bda063d17ba72759",
            "arn": "arn:aws:ec2:us-east-1:058775512105:instance/i-05e1faf16d965e8e5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05e1faf16d965e8e5",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cloudtechbits_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0db58d1b1f61e3c15",
            "private_dns": "ip-10-0-1-143.ec2.internal",
            "private_ip": "10.0.1.143",
            "public_dns": "ec2-75-101-190-116.compute-1.amazonaws.com",
            "public_ip": "75.101.190.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-017dc17d36abafd79",
                "volume_size": 2,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b4a77fa3dc552e4f",
            "tags": {
              "Name": "Kiran's Config Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0285b346da9d5571c",
              "sg-083833b5f6738ff64"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon_linux_2",
            "data.aws_security_group.access_for_kiran_sg",
            "data.aws_security_group.ctb_web_server_identifier_sg",
            "data.aws_subnet.ctb_subnet_1"
          ]
        }
      ]
    }
  ]
}